--- a/myapp/res/layout/main.xml
+++ b/myapp/res/layout/main.xml
@@ -3,7 +3,7 @@
               android:orientation="vertical"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
-              android:id="@+id/heading" android:weightSum="1" android:background="#022238">
+              android:id="@+id/hello" android:weightSum="1" android:background="#022238">
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
